--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 html,
 body {
-  padding: 0;
+  padding: 120px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -13,4 +13,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+:root {
+  --header-height: 60px;
 }
