--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,7 @@
 html,
 body {
-  padding: 120px;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 a {
@@ -17,4 +15,6 @@ a {
 
 :root {
   --header-height: 60px;
+  --color-grey: #eaeaea;
+  --font-grey: #616161;
 }
