--- a/src/styles/TableData.module.css
+++ b/src/styles/TableData.module.css
@@ -7,3 +7,14 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+
+@media (max-width: 720px) {
+  .container {
+    margin: 24px 0 0;
+    width: 100%;
+  }
+
+  .table {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
