--- a/src/styles/Cell.module.css
+++ b/src/styles/Cell.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey);
-  border-top: 1px solid var(--color-grey);
+  border: 1px solid var(--color-grey);
+  margin: 0 -1px -1px 0;
 }
 
 .label,
@@ -17,13 +17,13 @@
 }
 
 .value {
-  font-weight: 700;
+  font-weight: 600;
 }
 
-.left {
+/* .left {
   border-right: 1px solid var(--color-grey);
 }
 
 .right {
   border-left: 1px solid var(--color-grey);
-}
+} */
