--- a/src/styles/Map.module.css
+++ b/src/styles/Map.module.css
@@ -1,3 +1,19 @@
 .container {
   display: flex;
 }
+
+.map {
+  width: 66%;
+  height: 400px;
+}
+
+@media (max-width: 720px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .map {
+    width: 100%;
+  }
+}
