--- a/src/styles/PostCard.module.css
+++ b/src/styles/PostCard.module.css
@@ -6,7 +6,12 @@
 }
 
 .textBox {
-  background-color: rgb(0, 0, 0, 0.2);
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0.001) 0%,
+    rgba(0, 0, 0, 0.25) 15%,
+    rgba(0, 0, 0, 0.25) 86%,
+    rgba(0, 0, 0, 0.001) 100%
+  );
   width: 100%;
   position: absolute;
   font-family: "Lato", sans-serif;
@@ -55,4 +60,18 @@
 
 .main-post-card {
   height: calc(100vh - 60px);
+}
+
+@media (max-width: 720px) {
+  .title.text {
+    font-size: 24px;
+  }
+
+  .button {
+    margin: 0 auto;
+  }
+
+  .grid-card {
+    height: 75vw;
+  }
 }
