--- a/src/styles/PostCardList.module.css
+++ b/src/styles/PostCardList.module.css
@@ -3,13 +3,23 @@
 }
 
 .title {
-  text-transform: capitalize;
-  font-size: 36px;
+  text-transform: uppercase;
+  font-size: 32px;
   text-align: center;
+  color: var(--font-grey);
 }
 
 .post-card-list {
   display: grid;
-  grid-gap: 16px;
+  grid-gap: 32px;
   grid-template-columns: 1fr 1fr 1fr;
+  max-width: 1200px;
+  margin: auto;
+}
+
+@media (max-width: 720px) {
+  .post-card-list {
+    grid-gap: 16px;
+    grid-template-columns: 1fr;
+  }
 }
