--- a/src/styles/PostImages.module.css
+++ b/src/styles/PostImages.module.css
@@ -3,4 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 12px;
+}
+
+.caption {
+  margin: 8px 0;
+  text-align: center;
 }
