--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,3 +18,10 @@ a {
   --color-grey: #eaeaea;
   --font-grey: #616161;
 }
+
+@media (max-width: 720px) {
+  p,
+  span {
+    font-size: 14px;
+  }
+}
