--- a/src/styles/Divider.module.css
+++ b/src/styles/Divider.module.css
@@ -1,5 +1,6 @@
 .divider {
-  border-bottom: 1px solid var(--color-grey);
+  border-bottom: 2px solid var(--color-grey);
   font-weight: 700;
-  margin: 24px 12px;
+  margin: 24px 0;
+  line-height: 24px;
 }
