--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -5,10 +5,13 @@
   text-transform: uppercase;
   letter-spacing: 1px;
   background-color: #fff;
-  position: sticky;
-  bottom: 0;
   display: flex;
   align-items: center;
+}
+
+.sticky {
+  position: sticky;
+  bottom: 0;
 }
 
 @media (max-width: 720px) {
