--- a/src/styles/PostCardList.module.css
+++ b/src/styles/PostCardList.module.css
@@ -1,5 +1,6 @@
 .container {
   padding: 24px;
+  height: calc(100vh - 120px);
 }
 
 .title {
@@ -7,6 +8,7 @@
   font-size: 32px;
   text-align: center;
   color: var(--font-grey);
+  letter-spacing: 16px;
 }
 
 .post-card-list {
@@ -21,5 +23,13 @@
   .post-card-list {
     grid-gap: 16px;
     grid-template-columns: 1fr;
+  }
+
+  .title {
+    letter-spacing: 4px;
+  }
+
+  .container {
+    height: auto;
   }
 }
