--- a/src/styles/PostCardList.module.css
+++ b/src/styles/PostCardList.module.css
@@ -1,6 +1,5 @@
 .container {
-  padding: 24px;
-  height: calc(100vh - 120px);
+  padding: 0 24px 24px;
 }
 
 .title {
@@ -14,9 +13,15 @@
 .post-card-list {
   display: grid;
   grid-gap: 32px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   max-width: 1200px;
   margin: auto;
+}
+
+@media (max-width: 1260px) {
+  .post-card-list {
+    grid-template-columns: 1fr;
+  }
 }
 
 @media (max-width: 720px) {
