--- a/src/styles/PostLayout.module.css
+++ b/src/styles/PostLayout.module.css
@@ -14,7 +14,7 @@
 
 @media (max-width: 720px) {
   .title {
-    font-size: 24px;
-    margin: 32px;
+    font-size: 20px;
+    margin: 0 16px 16px;
   }
 }
