--- a/src/styles/PostCard.module.css
+++ b/src/styles/PostCard.module.css
@@ -62,7 +62,9 @@
 }
 
 .subtitle {
-  font-size: 16px;
+  font-size: 20px;
+  margin: 0;
+  letter-spacing: 2px;
 }
 
 .grid-card {
@@ -100,7 +102,7 @@
   }
 
   .subtitle.text {
-    font-size: 12px;
+    font-size: 16px;
   }
 
   .title-main {
