--- a/src/styles/PostCard.module.css
+++ b/src/styles/PostCard.module.css
@@ -15,6 +15,11 @@
   width: 100%;
   position: absolute;
   font-family: "Lato", sans-serif;
+  padding: 16px 0;
+  text-align: center;
+}
+
+.textBox.main {
   padding: 24px 0;
 }
 
@@ -53,6 +58,8 @@
 .title {
   font-weight: 700;
   font-size: 20px;
+  letter-spacing: 2px;
+  padding: 0 16px;
 }
 
 .title-main {
@@ -62,9 +69,14 @@
 }
 
 .subtitle {
-  font-size: 20px;
+  font-size: 16px;
   margin: 0;
+}
+
+.main-post-card-subtitle {
+  font-size: 24px;
   letter-spacing: 2px;
+  margin: 8px 0;
 }
 
 .grid-card {
@@ -82,6 +94,24 @@
   animation-fill-mode: forwards;
 }
 
+.scroll-down-icon {
+  z-index: 1;
+  font-size: 44px;
+  bottom: 0;
+  right: 24px;
+  border: 1px solid white;
+  padding: 12px;
+  cursor: pointer;
+  position: absolute;
+  background-color: white;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+.scroll-down-icon.is-top {
+  right: calc(50% - 30px);
+}
+
 @media (max-width: 1200px) {
   .grid-card {
     height: 55vw;
@@ -97,6 +127,13 @@
     margin: 0 auto;
   }
 
+  .button:not(.main) {
+    padding: 8px 12px;
+    font-size: 12px;
+    font-weight: 500;
+    border-radius: 12px;
+  }
+
   .grid-card {
     height: 75vw;
   }
@@ -107,6 +144,20 @@
 
   .title-main {
     letter-spacing: 2px;
+  }
+
+  .main-post-card-subtitle {
+    font-size: 20px;
+    letter-spacing: 1px;
+    margin: 0;
+  }
+
+  .textBox.main {
+    padding: 24px 0;
+  }
+
+  .textBox {
+    padding: 16px 0;
   }
 }
 
