--- a/src/styles/DateBox.module.css
+++ b/src/styles/DateBox.module.css
@@ -8,7 +8,7 @@
   background-color: white;
   padding: 2px;
   border: 1px solid var(--color-grey);
-  color: var(--color-dark-grey);
+  color: var(--font-grey);
 }
 
 .date-unit {
