--- a/src/styles/PostImages.module.css
+++ b/src/styles/PostImages.module.css
@@ -1,17 +1,24 @@
 .images {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 12px;
+  display: block;
+  margin: 0 auto 12px;
 }
 
 .caption {
-  margin: 8px 0;
+  margin: 0 0 16px;
+  padding: 4px;
   text-align: center;
   color: var(--color-dark-grey);
+  display: block;
+  border: 1px solid var(--color-grey);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top: 0;
+  letter-spacing: 0.5px;
 }
 
 .image {
   border-radius: 4px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
