--- a/src/styles/PostCard.module.css
+++ b/src/styles/PostCard.module.css
@@ -1,6 +1,6 @@
 .image {
   background-size: cover;
-  background-position: bottom;
+  background-position: top;
   filter: blur(5px) saturate(0);
   display: flex;
 }
