--- a/src/styles/Loader.module.css
+++ b/src/styles/Loader.module.css
@@ -49,6 +49,10 @@
   z-index: 100;
   background-color: white;
   display: flex;
+  height: 100%;
+  transition-property: opacity;
+  transition-duration: 2s;
+  opacity: 1;
 }
 
 .fullscreen {
@@ -61,4 +65,13 @@
 
 .loader-heading {
   letter-spacing: 0.5px;
+  max-width: 250px;
+}
+
+.loaded {
+  opacity: 0;
+}
+
+.hidden {
+  visibility: hidden;
 }
