--- a/src/styles/PostCard.module.css
+++ b/src/styles/PostCard.module.css
@@ -1,8 +1,14 @@
-.image {
-  background-size: cover;
-  background-position: top;
+.next-image-main {
+  object-position: top;
+  object-fit: cover;
+}
+
+.next-image {
   filter: blur(5px) saturate(0);
-  display: flex;
+}
+
+.next-image-container {
+  position: relative;
 }
 
 .textBox {
