--- a/src/styles/Loader.module.css
+++ b/src/styles/Loader.module.css
@@ -39,7 +39,6 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  border: 3px solid var(--color-grey);
   padding: 24px;
   border-radius: 12px;
   align-items: center;
@@ -53,6 +52,8 @@
   transition-property: opacity;
   transition-duration: 2s;
   opacity: 1;
+  position: absolute;
+  width: 100%;
 }
 
 .fullscreen {
@@ -74,4 +75,8 @@
 
 .hidden {
   visibility: hidden;
+}
+
+.border {
+  border: 1px solid var(--color-grey);
 }
