--- a/src/styles/Divider.module.css
+++ b/src/styles/Divider.module.css
@@ -1,6 +1,19 @@
+
+/* 
+when changing bottom border or line height please adjust DIVIDER_HEIGHT in main module !!! 
+*/
 .divider {
-  border-bottom: 2px solid var(--color-grey);
+  border-bottom: 2px solid var(--color-grey); 
   font-weight: 700;
   margin: 24px 0;
   line-height: 24px;
 }
+
+@media (max-width: 720px) {
+  .sticky-divider {
+    position: sticky;
+    background-color: white;
+    z-index: 1;
+  }
+}
+
