--- a/src/styles/PostCardList.module.css
+++ b/src/styles/PostCardList.module.css
@@ -1,6 +1,7 @@
 .container {
   padding: 0 24px 24px;
   min-height: calc(100vh - 140px);
+  position: relative;
 }
 
 .title {
@@ -38,7 +39,11 @@
   }
 
   .container {
-    min-height: 100vh;
+    min-height: 75vh;
     height: auto;
   }
+}
+
+.drop-grid {
+  display: block;
 }
