--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -1,5 +1,21 @@
 .modal-container {
-    z-index: 100;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: white;
     height: 100vh;
     width: 100vw;
+}
+
+.modal-content {
+   display: flex;
+   justify-content: center;
+}
+
+.close-icon {
+    cursor: pointer;
+    position: absolute;
+    top: 24px;
+    right:48px;
 }
