--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -11,6 +11,7 @@
 .modal-content {
    display: flex;
    justify-content: center;
+   padding: 4px;
 }
 
 .close-icon {
@@ -19,3 +20,14 @@
     top: 24px;
     right:48px;
 }
+
+@media screen and (max-width: 720px)  {
+    .close-icon {
+        top: 6px;
+        right:12px;
+    }
+
+    .modal-header {
+        padding-top: 8px;
+    }
+  }
