--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -4,8 +4,9 @@
     left: 0;
     z-index: 1000;
     background-color: white;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    overflow: scroll;
 }
 
 .modal-content {
@@ -16,7 +17,7 @@
 
 .close-icon {
     cursor: pointer;
-    position: absolute;
+    position: fixed;
     top: 24px;
     right:48px;
 }
