--- a/src/styles/PostCard.module.css
+++ b/src/styles/PostCard.module.css
@@ -4,7 +4,9 @@
 }
 
 .next-image {
-  filter: blur(5px) saturate(0);
+  transition: all 1s ease-in-out;
+  transform: scale(1.05);
+  filter: blur(8px) saturate(0);
 }
 
 .next-image-container {
@@ -90,10 +92,8 @@
 }
 
 .liven-up {
-  animation-name: liven;
-  animation-duration: 5s;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
+  transform: scale(1);
+  filter: blur(0);
 }
 
 .scroll-down-icon {
