--- a/src/styles/PostCard.module.css
+++ b/src/styles/PostCard.module.css
@@ -11,6 +11,7 @@
 
 .next-image-container {
   position: relative;
+  height: 100%;
 }
 
 .textBox {
@@ -27,13 +28,13 @@
   text-align: center;
 }
 
-.textBox.main {
-  padding: 24px 0;
-}
-
 .container {
   position: relative;
   overflow-y: hidden;
+}
+
+.container-main-card {
+  height: calc(100vh - 60px);
 }
 
 .text {
@@ -114,6 +115,10 @@
   right: calc(50% - 30px);
 }
 
+.post-card-link {
+  display: inline-block;
+}
+
 @media (max-width: 1200px) {
   .grid-card {
     height: 55vw;
@@ -161,41 +166,4 @@
   .textBox {
     padding: 16px 0;
   }
-}
-
-@keyframes liven {
-  from {
-    filter: blur(5px) saturate(0);
-  }
-  to {
-    filter: blur(0) saturate(1);
-  }
-}
-
-@keyframes animateScrollButton  {
-	0%,
-	100% {
-		transform: translateY(0);
-	}
-
-	10%,
-	30%,
-	50%,
-	70% {
-		transform: translateY(-16px);
-	}
-
-	20%,
-	40%,
-	60% {
-		transform: translateY(16px);
-	}
-
-	80% {
-		transform: translateY(12px);
-	}
-
-	90% {
-		transform: translateY(-12px);
-	}
 }
