--- a/src/styles/PostCard.module.css
+++ b/src/styles/PostCard.module.css
@@ -35,6 +35,7 @@
 
 .container-main-card {
   height: calc(100vh - 60px);
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 .text {
