--- a/src/styles/PostImages.module.css
+++ b/src/styles/PostImages.module.css
@@ -21,4 +21,8 @@
   border-radius: 4px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  object-position: center;
 }
